text align issues
switched from justify to simply text align left

--- a/css/styles.css
+++ b/css/styles.css
@@ -115,8 +115,8 @@ footer .nav>li>a:hover {
 	margin-bottom:40px;
 }
 
-.justify{
-	text-align:justify;
+.left{
+	text-align:left;
 }
 
 .more{
